--- a/src/styles/components/Profile.module.css
+++ b/src/styles/components/Profile.module.css
@@ -21,5 +21,12 @@
 
 .profileContainer div p {
   font-size: 1rem;
+  list-style: 1;
   margin-top: 0.5rem;
+}
+
+.profileContainer div p img {
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.5rem;
 }
