styling disabled countdown button

--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -74,5 +74,9 @@
 .countdownButton:disabled {
   background: var(--white);
   color: var(--text);
+  border-bottom: 4px solid var(--green);
   cursor: not-allowed;
+}
+.countdownButton:disabled img {
+  transform: translateX(0.5rem);
 }
